deadline support in AggregateFixture